Updating Index file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>My App</title>
 </head>
 <body>
-    <h1>My App is cool</h1>
+    <h1>Simple App</h1>
+    <nav>
+        <ul>
+            <li> <a href="">Home</a> </li>
+            <li> <a href="">About</a> </li>
+        </ul>
+    </nav>
     <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus amet a minima. Labore alias quam assumenda reprehenderit fuga unde incidunt, ullam, corporis ducimus dolor nisi? Earum, eos! Aspernatur minus at beatae nisi libero, modi suscipit laudantium vel sequi saepe excepturi exercitationem quae placeat ipsam quaerat maxime quibusdam velit! Corrupti sunt expedita tenetur provident odio id dignissimos eaque. Earum magnam rerum porro modi tenetur error sed quas natus veniam, ullam corporis quis explicabo similique ut vero laudantium sit, asperiores nemo distinctio voluptates magni odit temporibus tempora sint? Accusamus nobis architecto eligendi. Tempore, accusantium optio. Ipsam deserunt labore fugiat modi totam quam blanditiis excepturi sed aspernatur similique cum possimus cupiditate asperiores natus dicta architecto id debitis consequuntur, perspiciatis distinctio earum! Magnam laborum eaque ullam illo quos odio tenetur fugiat nostrum sunt sequi, consectetur vitae vero beatae laboriosam qui ad! Possimus architecto placeat perferendis, vel tempore atque repellendus sequi perspiciatis eum, incidunt soluta voluptas odit a voluptate earum aperiam est officiis. Fugiat ab eius assumenda ratione facilis recusandae minima sint dignissimos iusto eveniet, consectetur mollitia enim dolorum debitis doloribus ex vero corporis repellat. Corrupti fugiat culpa veritatis id iste a delectus est aliquid nisi debitis nemo assumenda tempora aut laborum, excepturi tempore distinctio.
     </p>
